update java to jdk 11 and update deps