@@ -15,8 +15,14 @@
  */
 package com.arpnetworking.commons.builder;
 
-import com.arpnetworking.commons.builder.annotations.SkipValidationProcessor;
 import com.arpnetworking.commons.builder.annotations.WovenValidation;
+import com.arpnetworking.commons.builder.processorbuilder.ComparisonBuilder;
+import com.arpnetworking.commons.builder.processorbuilder.ExampleBuilder;
+import com.arpnetworking.commons.builder.processorbuilder.ExamplePojo;
+import com.arpnetworking.commons.builder.processorbuilder.ImmediateBuilder;
+import com.arpnetworking.commons.builder.processorbuilder.NoChangeBuilder;
+import com.arpnetworking.commons.builder.processorbuilder.NoConstraintsBuilder;
+import com.arpnetworking.commons.builder.processorbuilder.UnprocessedParentBuilder;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import javassist.CannotCompileException;
 import javassist.ClassPool;
@@ -45,8 +51,6 @@ import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.function.Function;
-import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 
 /**
@@ -69,7 +73,7 @@ public final class ValidationProcessorTest {
         final ValidationProcessor processor = new ValidationProcessor();
         final ClassPool classPool = createClassPool();
         Assert.assertFalse(processor.accept(classPool.get(
-                "com.arpnetworking.commons.builder.ValidationProcessorTest$SkippedBuilder")));
+                "com.arpnetworking.commons.builder.processorbuilder.SkippedBuilder")));
     }
 
     @Test
@@ -85,9 +89,9 @@ public final class ValidationProcessorTest {
         final ValidationProcessor processor = new ValidationProcessor();
         final ClassPool classPool = createClassPool();
         Assert.assertTrue(processor.accept(classPool.get(
-                "com.arpnetworking.commons.builder.ValidationProcessorTest$ImmediateBuilder")));
+                "com.arpnetworking.commons.builder.processorbuilder.ImmediateBuilder")));
         Assert.assertTrue(processor.accept(classPool.get(
-                "com.arpnetworking.commons.builder.ValidationProcessorTest$DescendentBuilder")));
+                "com.arpnetworking.commons.builder.processorbuilder.DescendentBuilder")));
     }
 
     @Test
@@ -100,12 +104,12 @@ public final class ValidationProcessorTest {
         // full code coverage. The builder classes are processed as part of the build and therefore
         // get an annotation applied to them (or are skipped by having an annotation applied to them)
         final CtClass exampleCtClass = classPool.get(
-                "com.arpnetworking.commons.builder.ValidationProcessorTest$SimpleClass");
+                "com.arpnetworking.commons.builder.processorbuilder.SimpleClass");
 
         exampleCtClass.defrost();
         processor.markAsProcessed(exampleCtClass);
         exampleCtClass.defrost();
-        exampleCtClass.setName("com.arpnetworking.commons.builder.ValidationProcessorTest$ProcessedSimpleClass");
+        exampleCtClass.setName("com.arpnetworking.commons.builder.processorbuilder.ProcessedSimpleClass");
         exampleCtClass.getClassFile().compact();
         exampleCtClass.rebuildClassFile();
 
@@ -146,12 +150,12 @@ public final class ValidationProcessorTest {
         final ValidationProcessor processor = new ValidationProcessor();
         final ClassPool classPool = createClassPool();
         final CtClass exampleCtClass = classPool.get(
-                "com.arpnetworking.commons.builder.ValidationProcessorTest$ComparisonBuilder");
+                "com.arpnetworking.commons.builder.processorbuilder.ComparisonBuilder");
 
         exampleCtClass.defrost();
         processor.process(exampleCtClass);
         exampleCtClass.defrost();
-        exampleCtClass.setName("com.arpnetworking.commons.builder.ValidationProcessorTest$ProcessedComparisonBuilder");
+        exampleCtClass.setName("com.arpnetworking.commons.builder.processorbuilder.ProcessedComparisonBuilder");
         exampleCtClass.getClassFile().compact();
         exampleCtClass.rebuildClassFile();
 
@@ -160,7 +164,9 @@ public final class ValidationProcessorTest {
 
         // Assert that validation happens after processing
         @SuppressWarnings("unchecked")
-        final OvalBuilder<ExamplePojo> processedBuilder = (OvalBuilder<ExamplePojo>) exampleCtClass.toClass().newInstance();
+        final OvalBuilder<ExamplePojo> processedBuilder = (OvalBuilder<ExamplePojo>) exampleCtClass.toClass()
+                .getDeclaredConstructor()
+                .newInstance();
         try {
             processedBuilder.build();
             Assert.fail("Expected exception not thrown");
@@ -188,12 +194,12 @@ public final class ValidationProcessorTest {
         final ValidationProcessor processor = new ValidationProcessor();
         final ClassPool classPool = createClassPool();
         final CtClass exampleCtClass = classPool.get(
-                "com.arpnetworking.commons.builder.ValidationProcessorTest$NoChangeBuilder");
+                "com.arpnetworking.commons.builder.processorbuilder.NoChangeBuilder");
 
         exampleCtClass.defrost();
         processor.process(exampleCtClass);
         exampleCtClass.defrost();
-        exampleCtClass.setName("com.arpnetworking.commons.builder.ValidationProcessorTest$ProcessedNoChangeBuilder");
+        exampleCtClass.setName("com.arpnetworking.commons.builder.processorbuilder.ProcessedNoChangeBuilder");
         exampleCtClass.getClassFile().compact();
         exampleCtClass.rebuildClassFile();
 
@@ -202,7 +208,9 @@ public final class ValidationProcessorTest {
 
         // Assert that validation _still_ happens after processing
         @SuppressWarnings("unchecked")
-        final OvalBuilder<ExamplePojo> processedBuilder = (OvalBuilder<ExamplePojo>) exampleCtClass.toClass().newInstance();
+        final OvalBuilder<ExamplePojo> processedBuilder = (OvalBuilder<ExamplePojo>) exampleCtClass.toClass()
+                .getDeclaredConstructor()
+                .newInstance();
         try {
             processedBuilder.build();
             Assert.fail("Expected exception not thrown");
@@ -225,12 +233,12 @@ public final class ValidationProcessorTest {
         final ValidationProcessor processor = new ValidationProcessor();
         final ClassPool classPool = createClassPool();
         final CtClass exampleCtClass = classPool.get(
-                "com.arpnetworking.commons.builder.ValidationProcessorTest$NoConstraintsBuilder");
+                "com.arpnetworking.commons.builder.processorbuilder.NoConstraintsBuilder");
 
         exampleCtClass.defrost();
         processor.process(exampleCtClass);
         exampleCtClass.defrost();
-        exampleCtClass.setName("com.arpnetworking.commons.builder.ValidationProcessorTest$ProcesNoConstraintsBuilder");
+        exampleCtClass.setName("com.arpnetworking.commons.builder.processorbuilder.ProcesNoConstraintsBuilder");
         exampleCtClass.getClassFile().compact();
         exampleCtClass.rebuildClassFile();
 
@@ -239,7 +247,9 @@ public final class ValidationProcessorTest {
 
         // Assert that no validation happens after processing
         @SuppressWarnings("unchecked")
-        final OvalBuilder<ExamplePojo> builder = (OvalBuilder<ExamplePojo>) exampleCtClass.toClass().newInstance();
+        final OvalBuilder<ExamplePojo> builder = (OvalBuilder<ExamplePojo>) exampleCtClass.toClass()
+                .getDeclaredConstructor()
+                .newInstance();
         final ExamplePojo postProcessedPojo = builder.build();
         Assert.assertNull(postProcessedPojo.getValue());
     }
@@ -268,12 +278,12 @@ public final class ValidationProcessorTest {
         final ValidationProcessor processor = new ValidationProcessor();
         final ClassPool classPool = createClassPool();
         final CtClass exampleCtClass = classPool.get(
-                "com.arpnetworking.commons.builder.ValidationProcessorTest$UnprocessedParentBuilder");
+                "com.arpnetworking.commons.builder.processorbuilder.UnprocessedParentBuilder");
 
         exampleCtClass.defrost();
         processor.process(exampleCtClass);
         exampleCtClass.defrost();
-        exampleCtClass.setName("com.arpnetworking.commons.builder.ValidationProcessorTest$ProcesUnprocessedParentBuilder");
+        exampleCtClass.setName("com.arpnetworking.commons.builder.processorbuilder.ProcesUnprocessedParentBuilder");
         exampleCtClass.getClassFile().compact();
         exampleCtClass.rebuildClassFile();
 
@@ -282,7 +292,7 @@ public final class ValidationProcessorTest {
 
         // Assert that validation happens after processing
         @SuppressWarnings("unchecked")
-        final OvalBuilder<ExamplePojo> builder = (OvalBuilder<ExamplePojo>) exampleCtClass.toClass().newInstance();
+        final OvalBuilder<ExamplePojo> builder = (OvalBuilder<ExamplePojo>) exampleCtClass.toClass().getDeclaredConstructor().newInstance();
         try {
             builder.build();
         } catch (final ConstraintsViolatedException e) {
@@ -300,7 +310,7 @@ public final class ValidationProcessorTest {
         final ValidationProcessor processor = new ValidationProcessor();
         final ClassPool classPool = createClassPool();
         final CtClass exampleCtClass = classPool.get(
-                "com.arpnetworking.commons.builder.ValidationProcessorTest$FrozenBuilder");
+                "com.arpnetworking.commons.builder.processorbuilder.FrozenBuilder");
         exampleCtClass.freeze();
 
         processor.process(exampleCtClass);
@@ -315,7 +325,7 @@ public final class ValidationProcessorTest {
         final ValidationProcessor processor = new ValidationProcessor();
         final ClassPool classPool = createClassPool();
         final CtClass ctClass = classPool.get(
-                "com.arpnetworking.commons.builder.ValidationProcessorTest$ExampleBuilder");
+                "com.arpnetworking.commons.builder.processorbuilder.ExampleBuilder");
 
         final StringBuilder validationChecksCode = new StringBuilder();
         final StringBuilder staticInitializerCode = new StringBuilder();
@@ -372,7 +382,7 @@ public final class ValidationProcessorTest {
 
     @Test
     public void testGenerateFieldContextDeclaration() {
-        final String className = "com.arpnetworking.commons.builder.ValidationProcessorTest$ExampleBuilder";
+        final String className = "com.arpnetworking.commons.builder.processorbuilder.ExampleBuilder";
         final String fieldName = "_foo";
         final String checkType = "net.sf.oval.constraint.NotNullCheck";
         final String checkName = ValidationProcessor.getCheckName(fieldName, checkType);
@@ -393,7 +403,7 @@ public final class ValidationProcessorTest {
         final String checkName = ValidationProcessor.getCheckName(fieldName, checkType);
         Assert.assertEquals(
                 checkName + ".configure(\n"
-                        + "com.arpnetworking.commons.builder.ValidationProcessorTest$ImmediateBuilder.class"
+                        + "com.arpnetworking.commons.builder.processorbuilder.ImmediateBuilder.class"
                         + ".getDeclaredField(\"_foo\")\n"
                         + ".getDeclaredAnnotation(net.sf.oval.constraint.NotNull.class));\n",
                 ValidationProcessor.generateCheckInitializer(
@@ -409,7 +419,9 @@ public final class ValidationProcessorTest {
         final String checkType = "net.sf.oval.constraint.NotNullCheck";
         final String checkName = ValidationProcessor.getCheckName(fieldName, checkType);
         Assert.assertEquals(
-                "if (!" + checkName + ".isSatisfied(this, _foo, null, null)) {\n"
+                "final com.arpnetworking.commons.builder.OBValidationCycle cycle = "
+                        + "new com.arpnetworking.commons.builder.OBValidationCycle(this);\n"
+                        + "if (!" + checkName + ".isSatisfied(this, _foo, cycle)) {\n"
                         + "violations.add(new net.sf.oval.ConstraintViolation("
                         + checkName + ", " + checkName + ".getMessage(), this, _foo, " + checkName + "_CONTEXT));\n"
                         + "}\n",
@@ -471,7 +483,9 @@ public final class ValidationProcessorTest {
         final String checkType = "net.sf.oval.constraint.EqualToFieldCheck";
         final String checkName = ValidationProcessor.getCheckName(fieldName, checkType);
         Assert.assertEquals(
-                "if (!" + checkName + ".isSatisfied(this, _foo, null, null)) {\n"
+                "final com.arpnetworking.commons.builder.OBValidationCycle cycle = "
+                        + "new com.arpnetworking.commons.builder.OBValidationCycle(this);\n"
+                        + "if (!" + checkName + ".isSatisfied(this, _foo, cycle)) {\n"
                         + "violations.add(new net.sf.oval.ConstraintViolation("
                         + checkName + ", " + checkName + ".getMessage(), this, _foo, " + checkName + "_CONTEXT));\n"
                         + "}\n",
@@ -513,7 +527,9 @@ public final class ValidationProcessorTest {
         final String checkType = "net.sf.oval.constraint.NotEqualToFieldCheck";
         final String checkName = ValidationProcessor.getCheckName(fieldName, checkType);
         Assert.assertEquals(
-                "if (!" + checkName + ".isSatisfied(this, _foo, null, null)) {\n"
+                "final com.arpnetworking.commons.builder.OBValidationCycle cycle = "
+                        + "new com.arpnetworking.commons.builder.OBValidationCycle(this);\n"
+                        + "if (!" + checkName + ".isSatisfied(this, _foo, cycle)) {\n"
                         + "violations.add(new net.sf.oval.ConstraintViolation("
                         + checkName + ", " + checkName + ".getMessage(), this, _foo, " + checkName + "_CONTEXT));\n"
                         + "}\n",
@@ -542,15 +558,15 @@ public final class ValidationProcessorTest {
     private static void assertViolation(
             final ConstraintsViolatedException e,
             final Class<?> checkClass,
-            final Object invalidValue,
+            @Nullable final Object invalidValue,
             final String fieldName,
             final Object validatedObject) {
         final ConstraintViolation[] violations = e.getConstraintViolations();
         Assert.assertEquals("Violations: " + Arrays.toString(violations), 1, violations.length);
         Assert.assertEquals(checkClass.getName(), violations[0].getCheckName());
         Assert.assertEquals(invalidValue, violations[0].getInvalidValue());
-        Assert.assertTrue(violations[0].getContext() instanceof FieldContext);
-        final FieldContext context = (FieldContext) violations[0].getContext();
+        Assert.assertTrue(violations[0].getContextPath().get(0) instanceof FieldContext);
+        final FieldContext context = (FieldContext) violations[0].getContextPath().get(0);
         Assert.assertEquals(fieldName, context.getField().getName());
         Assert.assertSame(validatedObject, violations[0].getValidatedObject());
     }
@@ -568,234 +584,5 @@ public final class ValidationProcessorTest {
         }
     }
 
-    @SkipValidationProcessor
-    private static final class SkippedBuilder<T> extends OvalBuilder<T> {
 
-        protected SkippedBuilder(final Function<SkippedBuilder<T>, T> targetConstructor) {
-            super(targetConstructor);
-        }
-    }
-
-    private abstract static class ImmediateBuilder<T> extends OvalBuilder<T> {
-
-        protected ImmediateBuilder(final Function<? extends ImmediateBuilder<T>, T> targetConstructor) {
-            super(targetConstructor);
-        }
-    }
-
-
-    private static final class DescendentBuilder<T> extends ImmediateBuilder<T> {
-
-        protected DescendentBuilder(final Function<DescendentBuilder<T>, T> targetConstructor) {
-            super(targetConstructor);
-        }
-    }
-
-    @SkipValidationProcessor
-    private static class ExampleBuilder<T> extends OvalBuilder<T> {
-
-        ExampleBuilder(final Function<ExampleBuilder<T>, T> targetConstructor) {
-            super(targetConstructor);
-        }
-
-        public ExampleBuilder<T> setValue(final Object value) {
-            _value = value;
-            return this;
-        }
-
-        @NotNull
-        private Object _value;
-    }
-
-    @SkipValidationProcessor
-    private abstract static class FrozenBuilder<T> extends OvalBuilder<T> {
-
-        protected FrozenBuilder(final Function<FrozenBuilder<T>, T> targetConstructor) {
-            super(targetConstructor);
-        }
-    }
-
-    /**
-     * There are two strange things going on here.
-     *
-     * 1) The builders are not nested inside pojo classes. When this is done
-     * and the builder is renamed after processing, which happens only in these
-     * tests, it breaks the the static parent class link.
-     *
-     * See:
-     * https://issues.jboss.org/browse/JASSIST-136
-     *
-     * Consequently, the builders are all nested direclty under the test to
-     * which they do not use their parent reference.
-     *
-     * 2) There is a single pojo class for simplicity. However, it must use
-     * reflection to retrieve the value since the builder class is one of
-     * six; three concrete builders and a second processed variant of each.
-     */
-    private static class ExamplePojo {
-
-        ExamplePojo(final Builder<ExamplePojo> builder) {
-            try {
-                _value = builder.getClass().getMethod("getValue").invoke(builder);
-                // CHECKSTYLE.OFF: IllegalCatch - Constructor is not allowed to throw.
-            } catch (final Exception e) {
-                // CHECKSTYLE.ON: IllegalCatch
-                throw new RuntimeException(e);
-            }
-        }
-
-        public Object getValue() {
-            return _value;
-        }
-
-        private final Object _value;
-    }
-
-    @SkipValidationProcessor
-    private static class ComparisonBuilder extends OvalBuilder<ExamplePojo> {
-
-        ComparisonBuilder() {
-            super(ExamplePojo::new);
-        }
-
-        // NOTE: Marked as nullable to faciliate null testing; normally
-        // setters for fields marked @NonNull should not be marked
-        // @Nullable.
-        public ComparisonBuilder setValue(@Nullable final Object value) {
-            _value = value;
-            return this;
-        }
-
-        public Object getValue() {
-            return _value;
-        }
-
-        @Override
-        protected boolean isSelfValidating(final Class<? extends OvalBuilder<?>> builderClass) {
-            return true;
-        }
-
-        @NotNull
-        private Object _value;
-    }
-
-    @SkipValidationProcessor
-    private static class NoChangeBuilder extends OvalBuilder<ExamplePojo> {
-
-        NoChangeBuilder() {
-            super(ExamplePojo::new);
-        }
-
-        // NOTE: Marked as nullable to faciliate null testing; normally
-        // setters for fields marked @NonNull should not be marked
-        // @Nullable.
-        public NoChangeBuilder setValue(@Nullable final Object value) {
-            _value = value;
-            return this;
-        }
-
-        public Object getValue() {
-            return _value;
-        }
-
-        @NotNull
-        private Object _value;
-    }
-
-    @SkipValidationProcessor
-    private static class NoConstraintsBuilder extends OvalBuilder<ExamplePojo> {
-
-        @SuppressFBWarnings("NP_NONNULL_FIELD_NOT_INITIALIZED_IN_CONSTRUCTOR")
-        NoConstraintsBuilder() {
-            super(ExamplePojo::new);
-        }
-
-        // NOTE: Marked as nullable to faciliate null testing; normally
-        // setters for fields marked @NonNull should not be marked
-        // @Nullable.
-        @SuppressFBWarnings("NP_PARAMETER_MUST_BE_NONNULL_BUT_MARKED_AS_NULLABLE")
-        public NoConstraintsBuilder setValue(@Nullable final Object value) {
-            _value = value;
-            return this;
-        }
-
-        public Object getValue() {
-            return _value;
-        }
-
-        @Nonnull // This annotation is ignored; it's not an OVal annotation
-        private Object _value;
-    }
-
-    @SkipValidationProcessor
-    private abstract static class ParentBuilder<B> extends OvalBuilder<ExamplePojo> {
-
-        @SuppressFBWarnings("NP_NONNULL_FIELD_NOT_INITIALIZED_IN_CONSTRUCTOR")
-        ParentBuilder() {
-            super(ExamplePojo::new);
-        }
-
-        // NOTE: Marked as nullable to faciliate null testing; normally
-        // setters for fields marked @NonNull should not be marked
-        // @Nullable.
-        public B setValue(@Nullable final Object value) {
-            _value = value;
-            return self();
-        }
-
-        public Object getValue() {
-            return _value;
-        }
-
-        protected abstract B self();
-
-        @NotNull
-        private Object _value;
-    }
-
-    @SkipValidationProcessor
-    private static class UnprocessedParentBuilder extends ParentBuilder<UnprocessedParentBuilder> {
-
-        @SuppressFBWarnings("NP_NONNULL_FIELD_NOT_INITIALIZED_IN_CONSTRUCTOR")
-        UnprocessedParentBuilder() {
-            super();
-        }
-
-        // NOTE: Marked as nullable to faciliate null testing; normally
-        // setters for fields marked @NonNull should not be marked
-        // @Nullable.
-        public UnprocessedParentBuilder setOtherValue(@Nullable final Object value) {
-            _otherValue = value;
-            return self();
-        }
-
-        public Object getOtherValue() {
-            return _otherValue;
-        }
-
-        @Override
-        protected UnprocessedParentBuilder self() {
-            return this;
-        }
-
-        @NotNull
-        private Object _otherValue;
-    }
-
-    private static class SimpleClass {
-
-        SimpleClass() {
-        }
-
-        public SimpleClass setValue(@Nullable final Object value) {
-            _value = value;
-            return this;
-        }
-
-        public Object getValue() {
-            return _value;
-        }
-
-        private Object _value;
-    }
 }
